update SDK, add theme matching

--- a/src/RestSelector.css
+++ b/src/RestSelector.css
@@ -1,5 +1,5 @@
 div.work-item-label label {
-    color: rgba(0,0,0,.55);
+    color: var(--text-secondary-color,rgba(0, 0, 0, .55));
     font-size: 12px;
     margin-bottom: 0;
     padding-bottom: 1px;
